scripts/hermes_fuzz_executed/fuzz_66_execution
'use strict';
<fim_middle>function obj(o, r) {}
obj = function obj(o, t) {   };


Execution Output ------------------:
test.js:2:1: error: invalid expression (possible JSX: pass -parse-jsx to parse)
<fim_middle>function obj(o, r) {}
^
